# atari-tempest

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  scale.py
data/: color_data.txt  figure-0  figure-1  level-0  level-1  level_data.txt  levels_data.txt
doc/: archi.drawio
include/: GameObject.hpp  Renderer.hpp  Timer.hpp  Utils.hpp  hershey.h  types.h  types.hpp
src/: GameObject.cpp  Renderer.cpp  Timer.cpp  Utils.cpp  main.cpp
src/core/: Band.cpp  Band.hpp  Blaster.cpp  Blaster.hpp  Bullet.cpp  Bullet.hpp  Data.cpp  Data.hpp  Entity.cpp  Entity.hpp  FigureData.cpp  FigureData.hpp  Flipper.cpp  Flipper.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObjectPool.hpp  LevelData.cpp  LevelData.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  RenderHandler.cpp  RenderHandler.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SpawnManager.cpp  SpawnManager.hpp  Spiker.cpp  Spiker.hpp  Tanker.cpp  Tanker.hpp  TitleScreen.cpp  TitleScreen.hpp
src/sdlw/: SDLW.cpp  SDLW.hpp
src/state/: DeathScreen.cpp  DeathScreen.hpp  GameScene.cpp  GameScene.hpp  LevelSelectionScene.cpp  LevelSelectionScene.hpp  SLevelSelect.cpp  SLevelSelect.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  TitleScreen.cpp  TitleScreen.hpp  WinScreen.cpp  WinScreen.hpp
src/ui/: ColorHandler.cpp  ColorHandler.hpp  Pen.cpp  Pen.hpp  UIElement.cpp  UIElement.hpp  UILevelBox.cpp  UILevelBox.hpp  UILevelCarousel.cpp  UILevelCarousel.hpp
src/utils/: Delay.hpp  Errors.cpp  Errors.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  Vector2D.cpp  Vector2D.hpp  hershey.h  types.hpp
